bk_ida/gccida/c3/fixup_var_refs_insn
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_insn/src/function.c:2207:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode promoted_mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_insn/src/function.c:2212:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v7; // r10d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_insn/src/function.c:2219:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v16; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_insn/src/function.c:2233:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_insn/src/function.c:2233:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_insn/src/function.c:2234:4: error: expected ';' after expression
rtx v31; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_insn/src/function.c:2234:5: error: use of undeclared identifier 'v31'; did you mean 'v11'?
rtx v31; // rdi 
    ^~~
    v11
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_insn/src/function.c:2215:5: note: 'v11' declared here
int v11; // eax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_insn/src/function.c:2235:4: error: expected ';' after expression
rtx v32; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_insn/src/function.c:2235:5: error: use of undeclared identifier 'v32'; did you mean 'v12'?
rtx v32; // rax 
    ^~~
    v12
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_insn/src/function.c:2216:9: note: 'v12' declared here
__int64 v12; // rcx 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_insn/src/function.c:2238:4: error: expected ';' after expression
rtx v35; // [rsp+10h] [rbp-38h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_insn/src/function.c:2238:5: error: use of undeclared identifier 'v35'
rtx v35; // [rsp+10h] [rbp-38h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_insn/src/function.c:2241:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v9 = ( unsigned __int16 *)insn[2]; 
                          ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_insn/src/function.c:2242:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v10.rtwint = ( __int64)insn[3].fld[0]; 
                       ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_insn/src/function.c:2247:12: error: expected ')'
if ( ( rtx)v12 == var || *( _WORD *)v12 == 65 && ( *( rtx *)( v12 + 8) == var || *( rtx *)( v12 + 16) == var) ) 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_insn/src/function.c:2247:4: note: to match this '('
if ( ( rtx)v12 == var || *( _WORD *)v12 == 65 && ( *( rtx *)( v12 + 8) == var || *( rtx *)( v12 + 16) == var) ) 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_insn/src/function.c:2265:35: error: expected expression
v15 = single_set_2( insn, *( rtx *)&insn[2]); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_insn/src/function.c:2272:16: error: expected expression
if ( *( ( rtx *)v9 + 1) == var ) 
               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_insn/src/function.c:2274:1: error: use of undeclared identifier 'v35'
v35 = no_share; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_insn/src/function.c:2278:12: error: use of undeclared identifier 'v35'
no_share = v35; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_insn/src/function.c:2281:30: error: expected expression
v29 = rtx_equal_p( *( ( rtx *)v9 + 2), var); 
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/fixup_var_refs_insn/src/obj/function.o] Error 1
